add fixer base url

--- a/gradle.properties
+++ b/gradle.properties
@@ -22,4 +22,5 @@ kotlin.code.style=official
 # thereby reducing the size of the R class for that library
 android.nonTransitiveRClass=true
 
-FixerApiKey = d14b563ab9a69075a9af6432e235b381
+Fixer.ApiKey = d14b563ab9a69075a9af6432e235b381
+Fixer.BaseUrl = https://data.fixer.io/api/
